--- a/pepal-front/angular.json
+++ b/pepal-front/angular.json
@@ -30,7 +30,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/@apizee/apirtc/apiRTC.min.js"
+            ]
           },
           "configurations": {
             "production": {
