--- a/pepal-front/package.json
+++ b/pepal-front/package.json
@@ -7,11 +7,16 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "^12.0.5",
+    "@angular/compiler-cli": "^11.2.14",
+    "typescript": "~4.1.5",
     "@angular/animations": "~11.2.14",
+    "@angular/cdk": "^12.0.5",
     "@angular/common": "~11.2.14",
     "@angular/compiler": "~11.2.14",
     "@angular/core": "~11.2.14",
@@ -19,6 +24,7 @@
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
+    "@angular/service-worker": "~11.2.14",
     "@apizee/apirtc": "^4.4.10",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -26,8 +32,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.13",
-    "@angular/cli": "~11.2.14",
-    "@angular/compiler-cli": "~11.2.14",
+    "@angular/cli": "^12.0.5",
+    "@angular/compiler-cli": "^11.2.14",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -42,5 +48,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
+  },
+  "engines": {
+    "node": "14.17.0",
+    "npm": "6.14.13"
   }
 }
