--- a/pepal-front/package.json
+++ b/pepal-front/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.14",
+    "@angular/cdk": "^12.0.5",
     "@angular/common": "~11.2.14",
     "@angular/compiler": "~11.2.14",
     "@angular/core": "~11.2.14",
@@ -20,6 +21,9 @@
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
     "@apizee/apirtc": "^4.4.10",
+    "bootstrap": "^5.0.2",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.4.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
